# home-alog

./: .env.example  .gitignore  .python-version  README.md  pyproject.toml
examples/: populate_sample_data.py
src/home_alog/: __init__.py
src/home_alog/database/: __init__.py  connection.py  operations.py  schema.py
src/home_alog/server/: __init__.py  mcp_server.py
